src/unit_tests/CustSemantics/fail/wrong-main-meth.cl
class Main inherits IO {
    a: Int;

    main(c: Int, b:String, a:IO): Int {
        1
    };
};
